# Local-Blockchain

./: Blockchain.sln  CMakeLists.txt  README.md
Blockchain/: Blockchain.cpp  Blockchain.vcxproj  Blockchain.vcxproj.filters  CMakeLists.txt  block.h  hash.h  transaction.h  user.h
